--- a/styles-1.css
+++ b/styles-1.css
@@ -40,6 +40,7 @@ h1 {
 
 body {
     font-size: 18px
+    background-color: black;
 }
 
 .button input[type="submit"] {
@@ -53,5 +54,6 @@ body {
     color: black;
     border:2px solid ##000000;
 }
+
 
 
