--- a/styles-1.css
+++ b/styles-1.css
@@ -40,20 +40,21 @@ h1 {
 
 body {
     font-size: 18px
-    background-color: ##000000;
+    background-color: #000000;
 }
 
 .button input[type="submit"] {
     background-color: green;
     color: black;
-    border: 2px solid ##000000
+    border: 2px solid #000000
 }
 
 .button input[type="reset"] {
     background-color: red;
     color: black;
-    border:2px solid ##000000;
+    border:2px solid #000000;
 }
+
 
 
 
