--- a/styles-1.css
+++ b/styles-1.css
@@ -39,7 +39,7 @@ h1 {
 }
 
 body {
-    font-size: 18px
+    font-size: 18px;
     background-color: #000000;
 }
 
@@ -54,6 +54,7 @@ body {
     color: black;
     border:2px solid #000000;
 }
+
 
 
 
