--- a/styles-1.css
+++ b/styles-1.css
@@ -41,6 +41,7 @@ h1 {
 body {
     font-size: 18px;
     background-color: #000000;
+    color: white;
 }
 
 .button input[type="submit"] {
@@ -54,6 +55,7 @@ body {
     color: black;
     border:2px solid #000000;
 }
+
 
 
 
