--- a/styles-1.css
+++ b/styles-1.css
@@ -44,6 +44,10 @@ body {
     color: white;
 }
 
+#footer {
+    color: white;
+    text-align: center;
+}
 .button input[type="submit"] {
     background-color: green;
     color: black;
@@ -55,6 +59,7 @@ body {
     color: black;
     border:2px solid #000000;
 }
+
 
 
 
